fix(task): large image overflow

--- a/src/app/components/tasks/task-body/task-body.component.scss
+++ b/src/app/components/tasks/task-body/task-body.component.scss
@@ -10,6 +10,14 @@
         display: block;
         margin: $ksi-margin 0;
       }
+
+      figure {
+        & > * {
+          max-width: 100%;
+        }
+
+        text-align: center;
+      }
     }
   }
 }
